# MedKit

./: .gitignore  README.md  aid-recipients.csv  amounts-only.csv
.github/workflows/: ci.yml  deploy.yml
contracts/pool/: Cargo.toml
contracts/verifier-v26/: Cargo.toml  README.md  justfile
contracts/verifier-v26/circuits/medkit/: Nargo.toml  Prover.toml
contracts/verifier-v26/circuits/medkit/src/: main.nr
contracts/verifier-v26/circuits/medkit_identity/: Nargo.toml  Prover.toml
contracts/verifier-v26/circuits/medkit_identity/src/: main.nr
contracts/verifier-v26/contracts/identity/: Cargo.toml  README.md
contracts/verifier-v26/contracts/rs-soroban-ultrahonk/: Cargo.toml
contracts/verifier-v26/contracts/tornado_classic/contracts/: Cargo.toml
contracts/verifier-v26/crates/test-utils/src/: lib.rs
contracts/verifier-v26/crates/ultrahonk-soroban-verifier/: VERIFIER_PROVENANCE.md
docs/: CI-CD.md  OPERATIONS.md
frontend/: eslint.config.js  package-lock.json  package.json
frontend/scripts/: typecheck.mjs
frontend/src/: App.css  App.jsx  Auditor.jsx  Demo.css  Demo.jsx  Distributions.jsx  Funding.jsx  (+10 more)
medkit_claim/: Nargo.toml  Prover.toml  addr.mjs  deployment.json  enroll.mjs  id-cards.json  id-tree.json  issue-pass.mjs  issuer-medical.mjs  med-records.json  med-tree.json  package-lock.json  package.json  pass-tree-medical.json  prove-identity-testnet.sh  prove-identity.mjs  prove-medical-testnet.sh  prove-medical.mjs  prove-pass-testnet.sh  prove-pass.mjs  prove-testnet.sh  prove.sh  recipients.csv  server.mjs  tree.mjs
scripts/: deploy-testnet.sh
(+14 files in other folders)
