[workspace]
resolver = "2"
members = [
    "crates/ultrahonk-soroban-verifier",
    "crates/test-utils",
    "contracts/rs-soroban-ultrahonk",
    "contracts/tornado_classic/contracts",
    "contracts/identity"
]

[workspace.dependencies]
soroban-sdk = { version = "=26.0.1", default-features = false }

[patch.crates-io]
# soroban-env-host 26.1.3 advertises ed25519-dalek >=2 but resolves 3.0,
# whose rand_core 0.10 traits are incompatible with its rand_chacha 0.3 test PRNG.
# Pin the compatible 2.x API for deterministic local contract tests.
soroban-env-host = { path = "../../vendor/soroban-env-host-26.1.3" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
